# chip8

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  chip8  cmake_install.cmake  todo.md
src/: chip8.hpp  font.hpp  instructions.cpp  main.cpp  platform.cpp  platform.hpp  state.cpp  state.hpp
